added tag content type

--- a/api/blog/models/blog.settings.json
+++ b/api/blog/models/blog.settings.json
@@ -42,6 +42,11 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "tags": {
+      "collection": "tag",
+      "via": "blogs",
+      "dominant": true
     }
   }
 }
