changed tag relationship

--- a/api/blog/models/blog.settings.json
+++ b/api/blog/models/blog.settings.json
@@ -45,8 +45,7 @@
     },
     "tags": {
       "collection": "tag",
-      "via": "blogs",
-      "dominant": true
+      "via": "blog"
     }
   }
 }
