--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -24,9 +24,9 @@
       "plugin": "upload",
       "required": false
     },
-    "blogs": {
+    "blog": {
       "via": "tags",
-      "collection": "blog"
+      "model": "blog"
     }
   }
 }
