--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.21.0",
     "knex": "<0.20.0",
     "pg": "^8.4.2",
     "pg-connection-string": "^2.4.0",
