changed relation tyep

--- a/api/blog/models/blog.settings.json
+++ b/api/blog/models/blog.settings.json
@@ -44,8 +44,7 @@
       "required": false
     },
     "tags": {
-      "collection": "tag",
-      "via": "blog"
+      "collection": "tag"
     }
   }
 }
