--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "strapi-plugin-email": "3.2.5",
     "strapi-plugin-upload": "3.2.5",
     "strapi-plugin-users-permissions": "3.2.5",
+    "strapi-provider-upload-google-cloud-storage": "^3.1.6",
     "strapi-utils": "3.2.5"
   },
   "author": {
