--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "uuid": "abf26da5-cbad-4282-8031-6a599c130abc"
   },
   "engines": {
-    "node": ">=12.19.0",
-    "npm": ">=6.14.8"
+    "node": ">=12.x"
   },
   "license": "MIT"
 }
