added email support for new blogs

--- a/api/blog/models/blog.settings.json
+++ b/api/blog/models/blog.settings.json
@@ -45,6 +45,10 @@
     },
     "tags": {
       "collection": "tag"
+    },
+    "finalized": {
+      "type": "boolean",
+      "default": false
     }
   }
 }
