--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.0",
+    "firebase": "^8.3.1",
     "knex": "<0.20.0",
     "pg": "^8.4.2",
     "pg-connection-string": "^2.4.0",
