--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.0",
     "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
     "knex": "<0.20.0",
     "pg": "^8.4.2",
     "pg-connection-string": "^2.4.0",
