--- a/api/training-week/models/training-week.settings.json
+++ b/api/training-week/models/training-week.settings.json
@@ -12,7 +12,7 @@
   },
   "attributes": {
     "overview": {
-      "type": "string"
+      "type": "text"
     },
     "fromDate": {
       "type": "date"
