--- a/api/training-week/models/training-week.settings.json
+++ b/api/training-week/models/training-week.settings.json
@@ -30,8 +30,8 @@
       "type": "integer"
     },
     "activities": {
-      "collection": "activity",
-      "via": "training_week"
+      "via": "training_week",
+      "collection": "activity"
     }
   }
 }
