--- a/api/training-week/models/training-week.settings.json
+++ b/api/training-week/models/training-week.settings.json
@@ -30,8 +30,11 @@
       "type": "integer"
     },
     "activities": {
-      "via": "training_week",
-      "collection": "activity"
+      "collection": "activity",
+      "via": "training_week"
+    },
+    "description": {
+      "type": "richtext"
     }
   }
 }
